--- a/web.html
+++ b/web.html
@@ -89,7 +89,7 @@
                 </button>
             </div>
         </div>
-        <div class="d-grid gap-2 d-md-block">
+        <div class="d-lg-grid gap-2 d-md-block">
             <button class=" btn btn-outline-dark" type="button">
                 <a href="#contact" class="text-secondary">
                     Contact Us
