--- a/web.html
+++ b/web.html
@@ -67,11 +67,11 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="old two.jpg" class="d-block  w-100" alt="old car">
+                        <img src="maldives.jpg" class="d-block  w-100" alt="old car">
 
                     </div>
                     <div class="carousel-item">
-                        <img src="old two.jpg" class="d-block w-100" alt="old car">
+                        <img src="bridge.jpg" class="d-block w-100" alt="old car">
                     </div>
                     <div class="carousel-item">
                         <img src="old two.jpg" class="d-block w-100" alt="old car">
@@ -89,12 +89,13 @@
                 </button>
             </div>
         </div>
-        <div class="d-lg-grid gap-2 d-md-block">
-            <button class=" btn btn-outline-dark" type="button">
-                <a href="#contact" class="text-secondary">
+        <div class="d-lg-grid gap-2 d-md-block text-center">
+          
+            <a href="#contact">
+                <button class="btn-primary btn-lg" type="button">
                     Contact Us
-                </a>
-            </button>
+                </button>
+            </a>
         </div>
         <div class="card-group container my-5">
             <div class="row">
@@ -107,7 +108,7 @@
                                 additional
                                 content. This content is a little bit longer.</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            <button type="button" class="btn btn-primary mt-3">
+                            <button type="button" class="btn btn-outline-dark">
                                 Read more
                             </button>
                         </div>
@@ -122,7 +123,7 @@
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            <button type="button" class="btn btn-primary mt-3">
+                            <button type="button" class="btn btn-outline-info">
                                 Read more
                             </button>
                         </div>
@@ -138,7 +139,7 @@
                                 show
                                 that equal height action.</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            <button type="button" class="btn btn-primary mt-3">
+                            <button type="button" class="btn btn-outline-success">
                                 Read more
                             </button>
                         </div>
@@ -158,7 +159,7 @@
                             sapiente numquam iste atque architecto nemo, corporis, sunt labore nobis. Deleniti earum vel
                             obcaecati placeat, cum inventore tempore nesciunt?</p>
                         <button type="button" class="btn btn-primary mt-3">
-                            Call us!
+                            See More
                         </button>
                     </div>
                 </div>
@@ -169,7 +170,7 @@
                             sapiente numquam iste atque architecto nemo, corporis, sunt labore nobis. Deleniti earum vel
                             obcaecati placeat, cum inventore tempore nesciunt?</p>
                         <button type="button" class="btn btn-primary mt-3">
-                            Call us!
+                            See More
                         </button>
                     </div>
                     <div class="col-md-5 my-3">
@@ -191,7 +192,7 @@
                             sapiente numquam iste atque architecto nemo, corporis, sunt labore nobis. Deleniti earum vel
                             obcaecati placeat, cum inventore tempore nesciunt?</p>
                         <button type="button" class="btn btn-primary mt-3">
-                            Call us!
+                            See More
                         </button>
                     </div>
                 </div>
