--- a/web.html
+++ b/web.html
@@ -38,7 +38,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="#">Web Design</a></li>
-                                    <li><a class="dropdown-item" href="#">Car Repairing</a></li>
+                                    <li><a class="dropdown-item" href="#">Web Services</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -67,14 +67,14 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="maldives.jpg" class="d-block  w-100" alt="old car">
+                        <img src="./images/maldives.jpg" class="d-block  w-100" alt="old car">
 
                     </div>
                     <div class="carousel-item">
-                        <img src="bridge.jpg" class="d-block w-100" alt="old car">
+                        <img src="./images/bridge.jpg" class="d-block w-100" alt="old car">
                     </div>
                     <div class="carousel-item">
-                        <img src="old two.jpg" class="d-block w-100" alt="old car">
+                        <img src="./images/old two.jpg" class="d-block w-100" alt="old car">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -92,7 +92,7 @@
         <div class="d-lg-grid gap-2 d-md-block text-center">
           
             <a href="#contact">
-                <button class="btn-primary btn-lg" type="button">
+                <button class="btn btn-outline-dark" type="button">
                     Contact Us
                 </button>
             </a>
